--- a/mods/fabric-api.pw.toml
+++ b/mods/fabric-api.pw.toml
@@ -3,11 +3,11 @@ filename = "fabric-api-0.67.0+1.18.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/P7dR8mSH/versions/YDlOLdpm/fabric-api-0.67.0%2B1.18.2.jar"
 hash-format = "sha1"
 hash = "31174f7510f15ceddd3b449da4bffc0c2c589a4b"
+mode = "metadata:curseforge"
 
 [update]
-[update.modrinth]
-mod-id = "P7dR8mSH"
-version = "YDlOLdpm"
+[update.curseforge]
+file-id = 4100443
+project-id = 306612
